[package]
name = "jumpcloud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
home = "0.5"
const_format = "0.2"
reqwest = {features = ["rustls-tls", "json"], version = "0.11"}
futures = "0.3"
tokio-test = "0.4"